--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@aws-crypto/sha256-js": "^5.2.0",
+    "@aws-sdk/client-bedrock-runtime": "^3.704.0",
+    "@aws-sdk/signature-v4": "^3.374.0",
+    "@aws-sdk/types": "^3.696.0",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-shell": "^2.0.1",
     "react": "^18.2.0",
