--- a/package.json
+++ b/package.json
@@ -16,8 +16,13 @@
     "@aws-sdk/types": "^3.696.0",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-shell": "^2.0.1",
+    "highlight.js": "^11.10.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
+    "rehype-highlight": "^7.0.1",
+    "remark-breaks": "^4.0.0",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
